--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -7,6 +7,7 @@
     "build:watch": "tsc -w"
   },
   "dependencies": {
+    "@web3frame/core-messages": "^1.0.0",
     "events": "^3.0.0",
     "web3": "^1.2.0",
     "web3-providers-http": "^1.2.0",
