--- a/packages/child-app/package.json
+++ b/packages/child-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-iframe",
+  "name": "child-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,8 +7,8 @@
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
-    "@web3frame/react-iframe": "1.0.0",
-    "@web3frame/core-iframe": "1.0.0",
+    "@kirby-web3/child-react": "1.0.0",
+    "@kirby-web3/child-core": "1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
