--- a/packages/child-core/package.json
+++ b/packages/child-core/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@web3frame/core-iframe",
+    "name": "@kirby-web3/child-core",
     "version": "1.0.0",
     "main": "build/index.js",
     "types": "build/index.d.ts",
@@ -7,7 +7,7 @@
       "build:watch": "tsc -w"
     },
     "dependencies": {
-      "@web3frame/core-messages": "^1.0.0",
+      "@kirby-web3/messages": "^1.0.0",
       "web3": "^1.2.0",
       "typescript": "^3.5.3"
     }
