--- a/packages/parent-core/package.json
+++ b/packages/parent-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web3frame/core-sdk",
+  "name": "@kirby-web3/parent-core",
   "version": "1.0.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -7,7 +7,7 @@
     "build:watch": "tsc -w"
   },
   "dependencies": {
-    "@web3frame/core-messages": "^1.0.0",
+    "@kirby-web3/messages": "^1.0.0",
     "events": "^3.0.0",
     "web3": "^1.2.0",
     "web3-providers-http": "^1.2.0",
