--- a/packages/child-app/package.json
+++ b/packages/child-app/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@kirby-web3/child-core": "1.0.0",
+    "@kirby-web3/child-react": "1.0.0",
+    "@reach/router": "^1.2.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
-    "@kirby-web3/child-react": "1.0.0",
-    "@kirby-web3/child-core": "1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-redux": "^7.1.0",
+    "react-scripts": "3.1.1",
     "typescript": "3.5.3"
   },
   "scripts": {
