--- a/packages/child-react/tsconfig.json
+++ b/packages/child-react/tsconfig.json
@@ -6,6 +6,7 @@
     "declarationDir": "build/",
     "jsx": "react",
     "allowSyntheticDefaultImports": false,
+    "skipLibCheck": true,
     "lib": ["dom", "es2017"]
   },
   "include": ["./src/**/*.ts", "./src/**/*.tsx"]
