--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@kirby-web3/parent-react": "1.0.0",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
-    "@kirby-web3/parent-react": "1.0.0",
+    "@types/styled-components": "^4.1.18",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.1.1",
+    "styled-components": "^4.3.2",
     "typescript": "3.4"
   },
   "scripts": {
