--- a/packages/messages/tsconfig.json
+++ b/packages/messages/tsconfig.json
@@ -5,7 +5,8 @@
     "declaration": true,
     "declarationDir": "build/",
     "allowSyntheticDefaultImports": false,
-    "lib": ["dom", "es2017"]
+    "lib": ["dom", "es2017"],
+    "skipLibCheck": true
   },
   "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
