--- a/packages/parent-core/tsconfig.json
+++ b/packages/parent-core/tsconfig.json
@@ -5,6 +5,7 @@
     "declaration": true,
     "declarationDir": "build/",
     "allowSyntheticDefaultImports": false,
+    "skipLibCheck": true,
     "lib": ["dom", "es2017"]
   },
   "include": ["./src/**/*.ts", "./src/**/*.tsx"]
