--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@kirby-web3/parent-react": "1.0.0",
+    "@kirby-web3/plugin-ethereum": "1.0.0",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
