--- a/packages/parent-react/package.json
+++ b/packages/parent-react/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@kirby-web3/parent-core": "1.0.0",
+        "@kirby-web3/plugin-ethereum": "1.0.0",
         "@types/react": "^16.8.23",
         "@types/react-redux": "^7.1.1",
         "react": "^16.8.6",
