--- a/packages/child-core/package.json
+++ b/packages/child-core/package.json
@@ -10,12 +10,10 @@
   },
   "dependencies": {
     "@kirby-web3/common": "^1.0.0",
-    "@portis/web3": "^2.0.0-beta.36",
     "@types/debug": "^4.1.5",
-    "burner-provider": "^1.0.3",
     "debug": "^4.1.1",
     "redux": "^4.0.4",
-    "typescript": "^3.5.3",
-    "web3": "^1.2.0"
+    "typescript": "^3.5.3"
+
   }
 }
