--- a/packages/plugin-ethereum/package.json
+++ b/packages/plugin-ethereum/package.json
@@ -9,11 +9,12 @@
     "clean": "rimraf ./build"
   },
   "dependencies": {
+    "@kirby-web3/child-core": "^1.0.0",
     "@kirby-web3/common": "^1.0.0",
     "@kirby-web3/parent-core": "^1.0.0",
-    "@kirby-web3/child-core": "^1.0.0",
+    "@portis/web3": "^2.0.0-beta.36",
+    "burner-provider": "^1.0.5",
     "debug": "^4.1.1",
-    "events": "^3.0.0",
     "web3": "^1.2.0",
     "web3-providers-http": "^1.2.0",
     "web3-providers-ws": "^1.2.0"
