--- a/packages/child-app/package.json
+++ b/packages/child-app/package.json
@@ -8,6 +8,7 @@
     "@reach/router": "^1.2.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
+    "@types/reach__router": "^1.2.4",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
     "react": "^16.8.6",
