--- a/package.json
+++ b/package.json
@@ -20,6 +20,19 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^3.15.0"
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
+    "@commitlint/config-lerna-scopes": "^8.1.0",
+    "@commitlint/prompt-cli": "^8.1.0",
+    "husky": "^3.0.4",
+    "lerna": "^3.15.0",
+    "multi-semantic-release": "^1.1.0",
+    "prettier": "^1.18.2",
+    "typescript": "^3.5.3"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
