--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "watch": "lerna run --parallel build:watch",
     "clean": "lerna run clean --parallel",
     "build": "lerna run build --sort",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "multi-semantic-release"
   },
   "repository": {
     "type": "git",
