fix(child-app): ci false to trick web3 bug
https://github.com/ethereum/web3.js/issues/3018

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,7 @@ jobs:
             - run:
                 name: Netlify - Child App
                 command: |
-                    yarn netlify:child-app
-                    
+                    if [ "$TESTVAR" = "master" ];  then yarn netlify:child-app; fi
 
 workflows:
     version: 2
