--- a/packages/child-core/package.json
+++ b/packages/child-core/package.json
@@ -4,6 +4,7 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
+    "lint": "tslint --project ./",
     "build:watch": "tsc -w",
     "build": "tsc",
     "clean": "rimraf ./build"
@@ -12,8 +13,9 @@
     "@kirby-web3/common": "^1.0.0",
     "@types/debug": "^4.1.5",
     "debug": "^4.1.1",
-    "redux": "^4.0.4",
+    "redux": "^4.0.4"
+  },
+  "devDependencies": {
     "typescript": "^3.5.3"
-
   }
 }
