--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -4,6 +4,7 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
+    "lint": "tslint --project ./",
     "build:watch": "tsc -w",
     "build": "tsc",
     "clean": "rimraf ./build"
@@ -12,7 +13,10 @@
     "@types/debug": "^4.1.5",
     "debug": "^4.1.1",
     "redux": "^4.0.4",
-    "redux-dynamic-middlewares": "^1.0.0",
+    "redux-dynamic-middlewares": "^1.0.0"
+  },
+  "devDependencies": {
+    "tslint": "^5.19.0",
     "typescript": "^3.5.3"
   }
 }
