--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -5,18 +5,21 @@
   "dependencies": {
     "@kirby-web3/parent-react": "1.0.0",
     "@kirby-web3/plugin-ethereum": "1.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.1.1",
+    "styled-components": "^4.3.2"
+  },
+  "devDependencies": {
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
     "@types/styled-components": "^4.1.18",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.1.1",
-    "styled-components": "^4.3.2",
-    "typescript": "3.4"
+    "typescript": "^3.5.3"
   },
   "scripts": {
+    "lint": "tslint --project ./",
     "start": "PORT=3001 react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
