--- a/packages/parent-core/package.json
+++ b/packages/parent-core/package.json
@@ -4,6 +4,7 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
+    "lint": "tslint --project ./",
     "build:watch": "tsc -w",
     "build": "tsc",
     "clean": "rimraf ./build"
@@ -12,8 +13,12 @@
     "@kirby-web3/common": "^1.0.0",
     "debug": "^4.1.1",
     "events": "^3.0.0",
+    "redux": "^4.0.4",
     "web3": "^1.2.0",
     "web3-providers-http": "^1.2.0",
     "web3-providers-ws": "^1.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^3.5.3"
   }
 }
