--- a/packages/parent-react/package.json
+++ b/packages/parent-react/package.json
@@ -4,6 +4,7 @@
     "main": "build/index.js",
     "types": "build/index.d.ts",
     "scripts": {
+        "lint": "tslint --project ./",
         "build:watch": "tsc -w",
         "build": "tsc",
         "clean": "rimraf ./build"
@@ -14,7 +15,8 @@
         "@types/react": "^16.8.23",
         "@types/react-redux": "^7.1.1",
         "react": "^16.8.6",
-        "react-redux": "^7.1.0"
+        "react-redux": "^7.1.0",
+        "redux": "^4.0.4"
     },
     "devDependencies": {
         "typescript": "^3.5.3"
