--- a/packages/child-app/package.json
+++ b/packages/child-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@kirby-web3/child-core": "1.0.0",
     "@kirby-web3/child-react": "1.0.0",
+    "@kirby-web3/plugin-ethereum": "1.0.0",
     "@reach/router": "^1.2.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
@@ -15,7 +16,8 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scripts": "3.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "lint": "tslint --project ./",
