chore(child-app): deploy netlify on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
             - run:
                 name: Netlify - Child App
                 command: |
-                    if [ "$TESTVAR" = "master" ];  then yarn netlify:child-app; fi
+                    if [ "$CIRCLE_BRANCH" = "master" ];  then yarn netlify:child-app; fi
 
 workflows:
     version: 2
