--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "tslint": "^5.19.0",
     "typescript": "^3.5.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
