--- a/packages/plugin-ethereum/package.json
+++ b/packages/plugin-ethereum/package.json
@@ -21,5 +21,8 @@
     "web3-providers-http": "^1.2.0",
     "web3-providers-ws": "^1.2.0",
     "web3-utils": "^1.2.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
