--- a/packages/ethereum-react/package.json
+++ b/packages/ethereum-react/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@kirby-web3/child-react",
+    "name": "@kirby-web3/ethereum-react",
     "version": "1.0.0",
     "main": "build/index.js",
     "types": "build/index.d.ts",
@@ -10,23 +10,21 @@
         "clean": "rimraf ./build"
     },
     "dependencies": {
-        "@kirby-web3/child-core": "1.0.0",
-        "@types/react": "^16.8.23",
-        "@types/react-redux": "^7.1.2",
-        "@types/styled-components": "^4.1.18",
-        "react-redux": "^7.1.1",
-        "react-svg": "^10.0.17",
-        "redux": "^4.0.4",
-        "styled-components": "^4.3.2"
+        "@kirby-web3/parent-core": "1.0.0",
+        "@kirby-web3/parent-react": "1.0.0",
+        "@kirby-web3/plugin-ethereum": "1.0.0"
     },
     "devDependencies": {
+        "@types/react": "^16.8.23",
+        "@types/react-redux": "^7.1.2",
         "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "typescript": "^3.5.3"
+        "react-redux": "^7.1.1",
+        "redux": "^4.0.4",
+        "typescript": "^3.5.3",
+        "web3": "^1.2.1"
     },
     "peerDependencies": {
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6"
+        "react": "^16.8.6"
     },
     "publishConfig": {
         "access": "public"
