--- a/packages/child-app/package.json
+++ b/packages/child-app/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@kirby-web3/child-core": "1.0.0",
-    "@kirby-web3/child-react": "1.0.0",
-    "@kirby-web3/plugin-ethereum": "1.0.0",
+    "@kirby-web3/child-core": "^1.0.0",
+    "@kirby-web3/child-react": "^1.0.0",
+    "@kirby-web3/plugin-connext": "^1.0.0",
+    "@kirby-web3/plugin-ethereum": "^1.0.0",
     "@reach/router": "^1.2.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
@@ -42,6 +43,9 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "react-test-renderer": "^16.9.0",
     "typescript": "^3.5.3"
   }
 }
