--- a/packages/demo/.env
+++ b/packages/demo/.env
@@ -1,2 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_IFRAME_SRC=http://localhost:3002
+REACT_APP_TARGET_ORIGIN=http://localhost:3002
 REACT_APP_ETHEREUM_NODE=wss://rinkeby.infura.io/ws/v3/06b8a36891d649ffa92950aeac5a7874
