fix(common): change networks

--- a/packages/child-app/.env
+++ b/packages/child-app/.env
@@ -1,3 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_ETHEREUM_NODE=wss://rinkeby.infura.io/ws/v3/06b8a36891d649ffa92950aeac5a7874
+REACT_APP_ETHEREUM_NODE_RINKEBY=wss://rinkeby.infura.io/ws/v3/06b8a36891d649ffa92950aeac5a7874
+REACT_APP_ETHEREUM_NODE_MAINNET=wss://mainnet.infura.io/ws/v3/06b8a36891d649ffa92950aeac5a7874
 REACT_APP_PORTIS_APP_ID="1a382335-7ba0-4834-a3cd-dd1eff365f98"
