--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@kirby-web3/ethereum-react": "1.0.0",
+    "@kirby-web3/plugin-ethereum": "^1.0.0",
     "@kirby-web3/plugin-connext": "^1.0.0",
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.3.1",
+    "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^4.0.37",
     "evm-chains": "^0.1.1",
     "query-string": "^6.8.3",
