--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -13,7 +13,8 @@
     "@types/debug": "^4.1.5",
     "debug": "^4.1.1",
     "redux": "^4.0.4",
-    "redux-dynamic-middlewares": "^1.0.0"
+    "redux-dynamic-middlewares": "^1.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "tslint": "^5.19.0",
