--- a/packages/demo/tsconfig.json
+++ b/packages/demo/tsconfig.json
@@ -13,7 +13,8 @@
     "resolveJsonModule": true,
     "noEmit": true,
     "jsx": "preserve",
-    "isolatedModules": true
+    "isolatedModules": true,
+    "sourceMap": true
   },
   "include": ["src"]
 }
