--- a/packages/child-core/package.json
+++ b/packages/child-core/package.json
@@ -13,9 +13,11 @@
     "@kirby-web3/common": "^1.0.0",
     "@types/debug": "^4.1.5",
     "debug": "^4.1.1",
+    "js-cookie": "^2.2.1",
     "redux": "^4.0.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.2",
     "typescript": "^3.5.3"
   },
   "publishConfig": {
