--- a/packages/plugin-ethereum/package.json
+++ b/packages/plugin-ethereum/package.json
@@ -16,6 +16,7 @@
     "@portis/web3": "^2.0.0-beta.36",
     "burner-provider": "^1.0.5",
     "debug": "^4.1.1",
+    "ethers": "^4.0.37",
     "redux": "^4.0.4",
     "web3": "^1.2.1",
     "web3-providers-http": "^1.2.0",
