--- a/packages/demo/tsconfig.json
+++ b/packages/demo/tsconfig.json
@@ -12,7 +12,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "noEmit": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "isolatedModules": true,
     "sourceMap": true
   },
