--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@kirby-web3/ethereum-react": "1.0.0",
-    "@kirby-web3/plugin-ethereum": "^1.0.0",
     "@kirby-web3/plugin-connext": "^1.0.0",
+    "@kirby-web3/plugin-ethereum": "^1.0.0",
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.3.1",
     "ethereum-blockies-base64": "^1.0.2",
@@ -24,6 +24,8 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
     "@types/styled-components": "^4.1.18",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "typescript": "^3.5.3"
   },
   "scripts": {
