--- a/packages/child-app/package.json
+++ b/packages/child-app/package.json
@@ -13,6 +13,7 @@
     "@types/reach__router": "^1.2.4",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
+    "query-string": "^6.8.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/query-string": "^6.3.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "react-test-renderer": "^16.9.0",
