build(plugin-trustedweb): trusted web plugin

--- a/packages/child-app/package.json
+++ b/packages/child-app/package.json
@@ -7,12 +7,14 @@
     "@kirby-web3/child-react": "^1.0.0",
     "@kirby-web3/plugin-connext": "^1.0.0",
     "@kirby-web3/plugin-ethereum": "^1.0.0",
+    "@kirby-web3/plugin-trustedweb": "^1.0.0",
     "@reach/router": "^1.2.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.8",
     "@types/reach__router": "^1.2.4",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
+    "ethereum-blockies-base64": "^1.0.2",
     "query-string": "^6.8.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
