--- a/packages/ethereum-react/package.json
+++ b/packages/ethereum-react/package.json
@@ -12,7 +12,8 @@
     "dependencies": {
         "@kirby-web3/parent-core": "^1.0.0",
         "@kirby-web3/parent-react": "^1.0.0",
-        "@kirby-web3/plugin-ethereum": "^1.0.0"
+        "@kirby-web3/plugin-ethereum": "^1.0.0",
+        "@kirby-web3/plugin-trustedweb": "^1.0.0"
     },
     "devDependencies": {
         "@types/react": "^16.8.23",
