--- a/packages/plugin-ethereum/package.json
+++ b/packages/plugin-ethereum/package.json
@@ -14,7 +14,7 @@
     "@kirby-web3/common": "^1.0.0",
     "@kirby-web3/parent-core": "^1.0.0",
     "@portis/web3": "^2.0.0-beta.54",
-    "burner-provider": "^1.0.5",
+    "@truffle/hdwallet-provider": "^1.0.27",
     "debug": "^4.1.1",
     "ethers": "^4.0.37",
     "redux": "^4.0.4",
