--- a/packages/child-app/.env
+++ b/packages/child-app/.env
@@ -2,3 +2,4 @@ SKIP_PREFLIGHT_CHECK=true
 REACT_APP_ETHEREUM_NODE_RINKEBY=wss://rinkeby.infura.io/ws/v3/06b8a36891d649ffa92950aeac5a7874
 REACT_APP_ETHEREUM_NODE_MAINNET=wss://mainnet.infura.io/ws/v3/06b8a36891d649ffa92950aeac5a7874
 REACT_APP_PORTIS_APP_ID="1a382335-7ba0-4834-a3cd-dd1eff365f98"
+REACT_APP_ID_HUB_URL="http://localhost:8080/v1/hedgehog"
