feat(common): store trustedweb entropy in localstorage

--- a/packages/plugin-trustedweb/package.json
+++ b/packages/plugin-trustedweb/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@audius/hedgehog": "^1.0.5",
+    "@kirby-web3/common": "^1.0.0",
     "@kirby-web3/child-core": "^1.0.0",
     "@kirby-web3/parent-core": "^1.0.0",
     "ethereum-blockies-base64": "^1.0.2",
