--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/debug": "^4.1.5",
     "debug": "^4.1.1",
+    "js-cookie": "^2.2.1",
     "redux": "^4.0.4",
     "redux-dynamic-middlewares": "^1.0.0",
     "redux-thunk": "^2.3.0"
