--- a/packages/child-app/package.json
+++ b/packages/child-app/package.json
@@ -15,6 +15,7 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
     "ethereum-blockies-base64": "^1.0.2",
+    "qrcode.react": "^1.0.0",
     "query-string": "^6.8.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
