--- a/packages/plugin-trustedweb/package.json
+++ b/packages/plugin-trustedweb/package.json
@@ -27,14 +27,16 @@
   },
   "dependencies": {
     "@audius/hedgehog": "^1.0.5",
-    "@kirby-web3/common": "^1.0.0",
     "@kirby-web3/child-core": "^1.0.0",
+    "@kirby-web3/common": "^1.0.0",
     "@kirby-web3/parent-core": "^1.0.0",
     "@kirby-web3/plugin-ethereum": "^1.0.0",
+    "@types/crypto-js": "^3.1.43",
+    "crypto-js": "^4.0.0",
     "ethereum-blockies-base64": "^1.0.2",
     "redux": "^4.0.4"
   },
   "publishConfig": {
-      "access": "public"
+    "access": "public"
   }
 }
